--- a/hub/index.html
+++ b/hub/index.html
@@ -440,7 +440,7 @@
 
 					<li>
 						<a class="page-link" href="../story/007d.html">
-							<img class="page-image" src="img/007d.jpg">
+							<img class="page-image" src="img/007d.gif">
 						</a>
 					</li>
 
@@ -500,7 +500,7 @@
 
 					<li>
 						<a class="page-link" href="../story/008a.html">
-							<img class="page-image" src="img/008a.jpg">
+							<img class="page-image" src="img/008a.gif">
 						</a>
 					</li>
 
