--- a/story/006a.html
+++ b/story/006a.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#111;
+      background-color:#12151a;
       font-family: BretzelGrotesk, sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -44,7 +44,7 @@
 
   // COLORS    
   // var designerBlack = d3.rgb("#12141A"), // Define a nice black color for the background, store it as var
-     var designerBlack = d3.rgb("#000000"),
+     var designerBlack = d3.rgb("#12151a"),
       designerRed = d3.rgb("#c83c46"),
       designerWhite = d3.rgb("#ffe9d2");
 
